--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="text-center p-3">Don't have an account? <a href="/index.html" style="text-decoration: none;">Sign up</a></p>
+                    <p class="text-center p-3">Don't have an account? <a href="#" style="text-decoration: none;">Sign up</a></p>
                 </div>
             </div>
         </div>
