--- a/profile.html
+++ b/profile.html
@@ -23,18 +23,10 @@
                                 <i class="fa-regular fa-user fa-2xl" style="color: #625BF7;"></i>
                             </div>
                             <div class="card-text m-4 p-3">
-                                <p>Full Name:
-                                    <script>document.write(localStorage.getItem("name1"))</script>
-                                </p>
-                                <p>Email:
-                                    <script>document.write(localStorage.getItem("email1"))</script>
-                                </p>
-                                <p>Token:
-                                    <script>document.write(localStorage.getItem("email1"))</script>
-                                </p>
-                                <p>Password:
-                                    <script>document.write(localStorage.getItem("pass1"))</script>
-                                </p>
+                                <p id="name"></p>
+                                <p id="email"></p>
+                                <p id="token"></p>
+                                <p id="password"></p>
                             </div>
                             <div class="d-grid gap-2">
                                 <button class="btn btn-primary btn-lg px-5" type="submit" id="logout">Logout</button>
