--- a/index.html
+++ b/index.html
@@ -16,24 +16,25 @@
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                     <div class="card signup" style="border: none;">
-                        <div class="card-body p-5">
+                        <div class="card-body p-5">                            
+                            <p>Welcome back! 👋</p>
                             <h2 class="mb-2">Sign up to your account</h2>
                             <form>
                                 <div class="form-outline form-white mb-4">
                                     <label class="form-label" for="name">Your Name</label>
-                                    <input type="text" id="name" class="form-control form-control-lg" required>
+                                    <input type="text" id="name" class="form-control form-control-lg" required />
                                 </div>
                                 <div class="form-outline form-white mb-4">
                                     <label class="form-label" for="email">Your Email</label>
-                                    <input type="email" id="email" class="form-control form-control-lg" required>
+                                    <input type="email" id="email" class="form-control form-control-lg" required />
                                 </div>
                                 <div class="form-outline form-white mb-4">
                                     <label class="form-label" for="password">Password</label>
-                                    <input type="password" id="password" class="form-control form-control-lg" required>
+                                    <input type="password" id="password" class="form-control form-control-lg" required />
                                 </div>
                                 <div class="form-outline form-white mb-4">
                                     <label class="form-label" for="cpassword">Confirm Password</label>
-                                    <input type="password" id="cpassword" class="form-control form-control-lg" require>
+                                    <input type="password" id="cpassword" class="form-control form-control-lg" require />
                                 </div>
                                 <div class="d-grid gap-2">
                                     <button class="btn btn-primary btn-lg px-5" type="submit"
